# openc2x-sumo-integration

./: README.md
Memoria/: 1_Introduccion.tex  2_Estado_del_arte.tex  3_Diseno_y_arquitectura_del_sistema.tex  4_Desarrollo_e_implementacion.tex  5_Evaluacion_del_sistema_V2V.tex  6_Estudio_de_viabilidad.tex  7_Conclusiones.tex  8_Glosario.tex  Anexos.tex  bibliografia.bib  formatoUOC.tex  main.tex
OpenC2X-standalone/cam/src/: caservice.cpp
OpenC2X-standalone/common/: CMakeLists.txt
OpenC2X-standalone/common/config/: config.h
OpenC2X-standalone/common/interface/: CMakeLists.txt  SumoInterface.cpp  SumoInterface.h
OpenC2X-standalone/common/utility/: Utils.cpp  Utils.h
OpenC2X-standalone/config/: default  openc2x
OpenC2X-standalone/dcc/src/: ChannelProber.cpp  PktStatsCollector.cpp  dcc.cpp
OpenC2X-standalone/gps/src/: CMakeLists.txt  GpsService.cpp  GpsService.h
OpenC2X-standalone/ldm/src/: ldm.cpp
SUMO/hello_openc2x/: c2x.conf  runHelloCAM.sh
SUMO/hello_openc2x/sumo/: config.sumocfg  hello_world.sumocfg  net.net.xml  routes.rou.xml
SUMO/sumo_v2i/: c2x.conf  generar_vehiculos.sh  runv2i.sh
SUMO/sumo_v2i/log/: analyze_v2i.py
SUMO/sumo_v2i/log/100_vehicles/: gps_100_veh_v2i_log.txt  ldm_100_veh_v2i_log.txt
SUMO/sumo_v2i/sumo/: net.net.xml  ruta_coche.xml  ruta_coche.xml.rou.xml  v2i.rou.xml  v2i.sumocfg
SUMO/sumo_v2v/: c2x.conf  generar_vehiculos.sh  runv2v.sh
SUMO/sumo_v2v/log/: analyze_v2v.py
SUMO/sumo_v2v/sumo/: debug_out.rou.xml  net.net.xml  sumo.launchd.xml  two_vehicles.rou.xml  two_vehicles.sumocfg
(+16 files in other folders)
